fixes sonarqube errors